fixed gBar spacing and updated config to new format

--- a/.config/gBar/style.scss
+++ b/.config/gBar/style.scss
@@ -39,7 +39,7 @@ $textsize: 16px;
 
 .bar {
     background-color: $bg;
-    margin: 10 8 0 8;
+    margin: 15 8 0 8;
     background-color: rgba(0,0,0,0);
 }
 
